--- a/src/style/templates/stratio-product/backroom/variables/_common.scss
+++ b/src/style/templates/stratio-product/backroom/variables/_common.scss
@@ -115,6 +115,7 @@
   --sds-button-disabled-icon-color: var(--sds-color-space-30);
 
   --sds-button-icon-spacer: 8px;
+  --sds-button-border-correction: 2px;
 
   // ###### SWITCH
   --sds-switch-background-color: var(--sds-color-space-30);
